# calculator

./: CMakeLists.txt  CMakePresets.json
include/: application.hpp  lexer.hpp  mpfr_converter.hpp  mpfr_env.hpp  mpfr_formatter.hpp  mpfr_num.hpp  parser.hpp
src/: main.cpp
